--- a/SmiteGG.html
+++ b/SmiteGG.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html lang="de">
-    <link rel="icon" href="smiteicon.ico" >
+    <link rel="icon" type="image/x-icon" href="smiteicon.ico" >
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Random Gods</title>
-     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 
 <body>
